<resources>
    <string name="app_name">Bornes ASF44</string>
    <string name="copyright">Airsoft44.com - Tous droits réservés</string>
    <string name="descriptionLogoASF">Logo ASF44</string>
    <string name="liste_dialog">Merci de vous connecter à la borne mère</string>

    <!-- Boutons -->
    <string name="btn_connexion_connecter">Connecter</string>
    <string name="btn_connexion_deconnecter">Deconnecter</string>
    <string name="btn_connexion_connexion">Connexion</string>
    <string name="btn_lancer">Lancer</string>

    <!-- Champs -->
    <string name="informationNbEquipes">Merci de saisir le nom de l\'équipe:</string>
    <string name="btnValider">Valider</string>
    <string name="tpsCaptureTotal">Temps de capture pour gagner</string>
    <string name="tpsChgtEquipe">Tous les temps affichés doivent être en secondes</string>
    <string name="infoConfigPartie">Temps de capture pour changer d\'équipes</string>
    <string name="tvCheckboxBuzzer">Activer le buzzer ?</string>
    <string name="nbEquipesEntree">Nombre d\'équipes: </string>

    <!-- Labels Layouts -->
    <string name="nbEquipes">Ajout d\'équipes</string>
    <string name="configurationPartie">Configuration partie</string>
    <string name="plus">+</string>
    <string name="moin">-</string>
    <string name="lancer">Lancer</string>
    <string name="ajouter">Ajouter</string>
    <string name="ajout_d_quipes">Ajout d\'équipes</string>
</resources>
